# thread-scoped-rs

./: .travis.yml  Cargo.toml  README.md  search-index.js
implementors/core/marker/: trait.Sync.js
implementors/core/ops/: trait.Drop.js
src/: lib.rs
src/thread_scoped/: lib.rs.html
thread_scoped/: fn.scoped.html  index.html  struct.JoinGuard.html  trait.ScopedDetach.html
