[package]
name = "thread-scoped"
version = "1.0.0"
authors = ["arcnmx", "The Rust Project Developers"]

description = "Stable std::thread::scoped"
documentation = "http://arcnmx.github.io/thread-scoped-rs/thread_scoped/"
repository = "https://github.com/arcnmx/thread-scoped-rs"
readme = "README.md"
keywords = ["thread", "scoped", "spawn", "stable"]
license = "MIT/Apache-2.0"

[features]
unstable = []
